--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 	</head>
 	<body>
 
-		<!-- YOUR CODE HERE -->
+		<form>
+			<input id="input" type="text" placeholder="Type your name here" />
+			<button id="button" type="submit">Submit</button>
+		</form>
 
 		<script src="dist/js/main.min.js"></script>
 	</body>
