--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>html-sass-babel-boilerplate</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@latest/normalize.min.css" />
 		<link rel="stylesheet" href="dist/css/main.min.css" />
+		<title>html-sass-babel-boilerplate</title>
 	</head>
 	<body>
 
